--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -432,6 +432,12 @@ paths:
                     publishDate: ''
                     recordCount: ''
                     uid: ''
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
       operationId: get-list-sdn
       description: 'Get the entry from the official [SDN sanction lists](https://www.treasury.gov/resource-center/sanction/sdn-list/pages/default.aspx) based on the result from the search calls'
       security:
@@ -657,7 +663,7 @@ components:
       title: sdn
       type: object
       x-examples: {}
-      description: Output payload of the entry from the CFSP sanction list
+      description: Output payload of the entry from the SDN lists
       properties:
         entity_number:
           type: string
