free api key added to the documentation

--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -1530,6 +1530,7 @@ components:
       name: x-api-key
       type: apiKey
       in: header
+      description: 'Trial API Key: sanction_api_cubemos'
 tags:
   - name: Sanction List Entry
     description: Full reference information in an official sanction list
