--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -226,12 +226,12 @@ paths:
                   organization:
                     name: sniper Africa
                     country_code: ''
-        description: |-
-          ### Payload request schema for single search
-          In order to perform a search on an organization through the sanction lists, the name and the desired sanction lists are required. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  
+        description: |
+          ### Payload request schema
+          In order to perform a search for an organization, the name and the desired sanction lists are required. Please note that the higher the ambiguity of input, the higher the output response payload can become.
       description: |-
-        ### Search an organization through sanction lists
-        This API call allows you to perform a search through the desired sanction lists for an organization. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. 
+        ### Search for a sanction list entry based on the organization name
+        This API call allows you to perform a search for sanction lists entries of organizations. The result is a list of all entries which match to the inputs along with the degree of the match (which indicates the confidence if the desired match was found with a percentage representation).
       security:
         - API Key: []
       tags:
@@ -243,7 +243,7 @@ paths:
       operationId: post-search-address
       responses:
         '200':
-          description: 'The request was created successfully and the results are available as an array. If the array is empty, there were no matching persons found in the desired sanction lists.'
+          description: 'The request was created successfully and the results are available as an array. If the array is empty, there were no matching persons found in the sanction lists.'
           content:
             application/json:
               schema:
@@ -303,11 +303,11 @@ paths:
                     city: munich
                     street: ''
         description: |-
-          ### Payload request scheme for single search
-          In order to search for a location bassed on the address, the sanction lists as well as the address details are required. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  
-      description: |-
-        ### Search on an entity through the desired sanction lists in at an address
-        This API call allows you to perform a search through the desired sanction lists for all the sanctioned entities at the desired location. 
+          ### Payload request scheme
+          In order to search for sanction lists entries, at least the specific country code is required. Please note though that the higher the ambiguity of input, the higher the output response payload can become. 
+      description: |
+        ### Search for a sanction list entry based on the address
+        This API call allows you to perform a sanction list search for all the sanctioned entities at the address or location of interest. 
       security:
         - API Key: []
       tags:
@@ -1004,7 +1004,10 @@ paths:
         '500':
           description: Internal Server Error
       operationId: get-list-sdn
-      description: 'Get the entry from the official [SDN sanction lists](https://www.treasury.gov/resource-center/sanction/sdn-list/pages/default.aspx) based on the result from the search calls'
+      description: |
+        Get the entry from the official [SDN sanction lists](https://www.treasury.gov/resource-center/sanction/sdn-list/pages/default.aspx) based on the result from the POST calls. 
+
+        The image below shows the place in the response payload of the person search POST call where the id for getting the original list entry can be found
       security:
         - API Key: []
       tags:
@@ -1570,7 +1573,7 @@ components:
       name: x-api-key
       type: apiKey
       in: header
-      description: 'Trial API Key: sanction_api_cubemos'
+      description: 'Trial key: sanction_api_cubemos'
 tags:
   - name: API Search Call
   - name: Original List Entry Call
