--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -130,6 +130,8 @@ paths:
       parameters: []
       security:
         - API Key: []
+      tags:
+        - 1. Person Search
     parameters: []
   /search/entities/organization:
     post:
@@ -225,6 +227,8 @@ paths:
         This API call allows you to perform a search for sanction lists entries of organizations. The result is a list of all entries which match to the inputs along with the degree of the match (which indicates the confidence if the desired match was found with a percentage representation).
       security:
         - API Key: []
+      tags:
+        - 2. Organization Search
     parameters: []
   /search/location/address:
     post:
@@ -299,6 +303,8 @@ paths:
         This API call allows you to perform a sanction list search for all the sanctioned entities at the address or location of interest.
       security:
         - API Key: []
+      tags:
+        - 3. Address Search
     parameters: []
   '/list/cfsp/{id}':
     get:
@@ -1575,3 +1581,6 @@ components:
 tags:
   - name: API Search Call
   - name: 4 Original List Entry Search
+  - name: 1. Person Search
+  - name: 2. Organization Search
+  - name: 3. Address Search
